--- a/app/src/main/res/layout/fragment_add_new_location.xml
+++ b/app/src/main/res/layout/fragment_add_new_location.xml
@@ -1,17 +1,256 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNewLocationFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
+<LinearLayout
 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-
-    <TextView
+>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:background="@color/white">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="241dp"
+
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="37dp"
+                    android:layout_marginRight="38dp"
+
+                    android:text="Washroom Location"
+                    android:textColor="#28104E"
+                    android:textSize="16dp" />
+
+                <Button
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onAddLocationClick"
+                    android:text="Add Location" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="37dp"
+                    android:layout_marginRight="50dp"
+                    android:text="Room Number"
+
+                    android:textColor="#28104E"
+                    android:textSize="16dp" />
+
+                <EditText
+                    android:id="@+id/et_roomNumber"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/rounded_edittext"
+                    android:textColor="@color/black"
+                    android:inputType="number"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="37dp"
+                    android:layout_marginRight="30dp"
+                    android:text="Washroom Name"
+
+                    android:textColor="#28104E"
+                    android:textSize="16dp" />
+
+                <EditText
+                    android:id="@+id/et_washroomName"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:background="@drawable/rounded_edittext"
+                    android:textColor="@color/black" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="37dp"
+                    android:layout_marginRight="50dp"
+                    android:text="Gender"
+
+                    android:textColor="#28104E"
+                    android:textSize="16dp" />
+                <TextView
+                    android:id="@+id/tv_genderSelected"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Male"
+                    android:textColor="#28104E"
+                    android:textSize="16dp" />
+
+                <Spinner
+                    android:id="@+id/sp_gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:spinnerMode="dropdown"
+                    android:textColor="@color/black"
+                    android:theme="@style/ThemeOverlay.AppCompat.Light"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="591dp"
+            android:background="#F9F9F9"
+            android:orientation="vertical"
+
+            >
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="331dp"
+                android:layout_height="129dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Cleanliness"
+                        android:textColor="#270F4D"
+                        android:textSize="20dp" />
+
+                    <RatingBar
+                        android:id="@+id/rb_ratingBar"
+                        style="?android:attr/ratingBarStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        android:isIndicator="false"
+                        android:numStars="5"
+                        android:progressBackgroundTint="#F7F4F8"
+                        android:progressTint="#9754CB"
+                        android:secondaryProgressTint="#DEACF5"
+                        android:stepSize="0.1" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="42dp"
+                android:layout_marginTop="40dp"
+                android:text="Optional"
+                android:textColor="#223F74"
+                android:textSize="20dp" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="331dp"
+                android:layout_height="129dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Sufficient Paper Towels"
+                        android:textColor="#270F4D"
+                        android:textSize="20dp" />
+
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="331dp"
+                android:layout_height="129dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="15dp"
+                        android:text="Sufficient Soap"
+                        android:textColor="#270F4D"
+                        android:textSize="20dp" />
+
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/bt_finish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="finish"
+                android:onClick="onAddNewWashroomClick"/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
+</ScrollView>
