--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -149,6 +149,17 @@
 
         </LinearLayout>
 
+
+        <TextView
+
+            android:id="@+id/mostRecentComment"
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
+
+
         <ListView
             android:id="@+id/commentListView"
             android:layout_width="match_parent"
