--- a/app/src/main/res/layout/activity_add_review_normal.xml
+++ b/app/src/main/res/layout/activity_add_review_normal.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -278,8 +282,8 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/cancelNormalReview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:backgroundTint="@color/white"
             app:tint="#9754CB"
             app:srcCompat="@drawable/ic_cancel"
@@ -287,20 +291,22 @@
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            app:fabCustomSize="60dp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/saveNormalReview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:backgroundTint="@color/white"
             app:tint="#9754CB"
             app:srcCompat="@drawable/ic_save"
             android:layout_gravity="right"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="40dp"
-
+            app:fabCustomSize="60dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"/>
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
