--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+
     >
    <!-- <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
@@ -68,6 +68,7 @@
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <Button
+                android:id="@+id/addNewLocation"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_marginLeft="20dp"
@@ -78,9 +79,7 @@
                 android:text="Add"
                 android:textColor="#9754CB"
                 android:textSize="16sp"
-                android:textStyle="bold"
-
-                android:onClick="onAddNewLocationClick" />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
