--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
 
+    >
+   <!-- <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id = "@+id/swipeRefresh">-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
 
         <fragment
             android:id="@+id/map"
@@ -66,6 +68,7 @@
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <Button
+                android:id="@+id/addNewLocation"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_marginLeft="20dp"
@@ -76,13 +79,11 @@
                 android:text="Add"
                 android:textColor="#9754CB"
                 android:textSize="16sp"
-                android:textStyle="bold"
-
-                android:onClick="onAddNewLocationClick" />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
 
 </FrameLayout>
