--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,13 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="toolbarStyle">@style/Toolbar</item>
         <!-- Customize your theme here. -->
 
+    </style>
+
+    <!-- Customize the toolbar theme here -->
+    <style name="Toolbar" parent="Widget.AppCompat.Toolbar">
     </style>
 
     <style name="DialogAnimation">
