--- a/app/src/main/res/layout/layout_adapter.xml
+++ b/app/src/main/res/layout/layout_adapter.xml
@@ -37,13 +37,13 @@
 
         >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/title"
-                android:layout_width="260dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceMedium"
@@ -56,10 +56,11 @@
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/amenities"
