--- a/app/src/main/res/layout/activity_add_new_location.xml
+++ b/app/src/main/res/layout/activity_add_new_location.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     >
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:title="@string/title_activity_add_location_map"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:minHeight="?attr/actionBarSize" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -36,12 +28,13 @@
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="37dp"
                             android:layout_marginRight="25dp"
@@ -51,8 +44,9 @@
                             android:textSize="16dp" />
 
                         <Button
-
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginRight="25dp"
                             android:layout_height="wrap_content"
                             android:onClick="onAddLocationClick"
                             android:text="Add Location" />
@@ -60,23 +54,25 @@
 
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="37dp"
                             android:layout_marginRight="50dp"
                             android:text="Room Number"
-
                             android:textColor="#28104E"
                             android:textSize="16dp" />
 
                         <EditText
                             android:id="@+id/et_roomNumber"
-                            android:layout_width="200dp"
+                            android:layout_width="0dp"
+                            android:layout_weight="1.3"
+                            android:layout_marginRight="25dp"
                             android:layout_height="45dp"
                             android:background="@drawable/rounded_edittext"
                             android:textColor="@color/black"
@@ -85,12 +81,13 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="37dp"
                             android:layout_marginRight="30dp"
@@ -101,9 +98,10 @@
 
                         <EditText
                             android:id="@+id/et_washroomName"
-                            android:layout_width="200dp"
+                            android:layout_width="0dp"
+                            android:layout_weight="1.1"
+                            android:layout_marginRight="25dp"
                             android:layout_height="45dp"
-
                             android:background="@drawable/rounded_edittext"
                             android:textColor="@color/black" />
                     </LinearLayout>
