--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -166,6 +166,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="375dp"
                 android:layout_marginTop="5dp"
+                android:divider="@null"
                 tools:layout_editor_absoluteY="372dp"
                 android:listSelector="@android:color/transparent"/>
 
